--- a/Prototype-BotFramework-WebChat/default.html
+++ b/Prototype-BotFramework-WebChat/default.html
@@ -3,6 +3,7 @@
 <head>
     <title>Cool Website</title>
     <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link rel="stylesheet" href="./src/collapsible-embed-webchat.css">
 </head>
