--- a/Prototype-BotFramework-WebChat/src/webchat.html
+++ b/Prototype-BotFramework-WebChat/src/webchat.html
@@ -4,7 +4,7 @@
     <title>Bot Chat</title>
     <meta name="viewport" content="width=device-width">
     <meta charset="UTF-8">
-    <link href="https://cdn.botframework.com/botframework-webchat/latest/botchat.css" rel="stylesheet" />
+    <link href="https://cdn.botframework.com/botframework-webchat/latest/botchat.css" rel="stylesheet">
 </head>
 <body>
 
