--- a/v4/Prototype-BotFramework-WebChat/src/webchat.html
+++ b/v4/Prototype-BotFramework-WebChat/src/webchat.html
@@ -1,65 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Bot Chat</title>
-    <link href="https://cdn.botframework.com/botframework-webchat/latest/botchat.css" rel="stylesheet" />
+    <style>       
+        html, body { height: 100% }
+        body { margin: 0 }
+        #BotChatGoesHere, #BotChatGoesHere > * {
+            height: 100%;
+            width: 100%;
+        }
+    </style>
+
 </head>
-<body>
 
-<div id="BotChatGoesHere"></div>
-<script src="https://cdn.botframework.com/botframework-webchat/latest/botchat.js"></script>
+<body style="font-family: 'Segoe UI'">
+    <div id="BotChatGoesHere"></div>
+    <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
 
-<script>
-    //persist user
-    var userId = '';
+    <script>
+        (async function () {
+            //set up styles
+            const styleOptions = {
+                bubbleBackground: '#eceff1',
+                bubbleTextColor: '#000000',
+                bubbleFromUserBackground: '#0078d7',
+                bubbleFromUserTextColor: '#ffffff'
+            };
 
-    if (localStorage.getItem('userId')) {
-        userId = localStorage.getItem('userId');
-    } else {
-        userId = guid().toString();
-        localStorage.setItem('userId', userId);
-    }
+            //get auth token - just treat as secret for prototyping
+            const { token } = 'W4DOiQBMA0w.cwA.BwM.Wl8d0zRXXPQ5Ws2iQq-oRl6L9X1lFOMgr9VSY4wSClA';
+
+            //persist user
+            var userId = '';
+            if (localStorage.getItem('userId')) {
+                userId = localStorage.getItem('userId');
+            } else {
+                userId = guid().toString();
+                localStorage.setItem('userId', userId);
+            }
     
-    //persist conversation
-    var conversationId = '';
-    if (localStorage.getItem('conversationId')) {
-        conversationId = localStorage.getItem('conversationId');
-    }
+            //persist conversation
+            var conversationId = '';
+            if (localStorage.getItem('conversationId')) {
+                conversationId = localStorage.getItem('conversationId');
+            }
 
-    //init DirectLine connection
-    var connection = new BotChat.DirectLine({
-        //secret: '<DIRECT_LINE_SECRET>',
-        secret: 'W4DOiQBMA0w.cwA.BwM.Wl8d0zRXXPQ5Ws2iQq-oRl6L9X1lFOMgr9VSY4wSClA',
-        conversationId: conversationId,
-        webSocket: false
-    });
+            //init DirectLine connection
+            var directLineConnection = window.WebChat.createDirectLine({ secret: token });
 
-    //subscribe to activity event to save conversation id
-    connection.activity$.subscribe(activity => {
-        if (!localStorage.getItem('conversationId')) {
-            conversationId = activity.conversation.id;
-            localStorage.setItem('conversationId', conversationId);
-        } 
-    });
+            directLineConnection.activity$.subscribe(activity => {
+                if (!localStorage.getItem('conversationId')) {
+                    conversationId = activity.conversation.id;
+                    localStorage.setItem('conversationId', conversationId);
+                } 
+            });
 
-    //init BotChat
-    BotChat.App({
-            botConnection: connection,
-            persistUser: true,
-            user: { id: userId, name: "User" },
-            resize: 'detect'
-        },
-        document.getElementById("BotChatGoesHere"));
+            window.WebChat.renderWebChat({
+                directLine: directLineConnection,
+                styleOptions
+            }, document.getElementById('BotChatGoesHere'));
 
+            document.querySelector('#BotChatGoesHere > *').focus();
+        })().catch(err => console.error(err));
 
+        function guid() {
+            return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, c => (c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16));
+        }
 
-    //quick helper function to generate a GUID
-    function guid() {
-        return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, c =>
-            (c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16)
-        )
-    }
-
-</script>
+    </script>
 </body>
 </html>
