--- a/v3/Prototype-BotFramework-WebChat/default.html
+++ b/v3/Prototype-BotFramework-WebChat/default.html
@@ -3,15 +3,12 @@
 <head>
     <title>Cool Website</title>
     <meta name="viewport" content="width=device-width">
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-    <link rel="stylesheet" href="./src/collapsible-embed-webchat.css">
 </head>
 <body>
     <h1>Hello welcome</h1>
     <p>Other standard website bits and pieces</p>
 
-    <div id="chatbot-embed" data-postition="bottom-right"></div>
-    <script src="./src/collapsible-embed-webchat.js"></script>
+    <div id="chatbot-embed"></div>
+    <script src="./src/control/collapsible-embed-webchat.js"></script>
 </body>
 </html>
