--- a/v3/Skype-WebChat/default.html
+++ b/v3/Skype-WebChat/default.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <title>Cool Website</title>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
+    <meta http-equiv="pragma" content="no-cache"> 
+    <meta http-equiv="content-style-type" content="text/css"> 
+    <meta http-equiv="content-script-type" content="text/javascript">
 
     <!-- DEV -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
