--- a/v3/Prototype-BotFramework-WebChat/src/iframe/webchat.html
+++ b/v3/Prototype-BotFramework-WebChat/src/iframe/webchat.html
@@ -10,13 +10,13 @@
 <body>
 
 <div id="BotChatGoesHere"></div>
-<![if IE]>
-    <script src="https://cdn.botframework.com/botframework-webchat/v3/botchat-es5.js"></script>
-<![endif]>
+<!-- [if IE] -->
+<script src="https://cdn.botframework.com/botframework-webchat/v3/botchat-es5.js"></script>
+<!-- [endif] -->
 
-<![if !IE]>
-    <script src="https://cdn.botframework.com/botframework-webchat/v3/botchat.js"></script>
-<![endif]>
+<!-- [if !IE] -->
+<script src="https://cdn.botframework.com/botframework-webchat/v3/botchat.js"></script>
+<!-- [endif] -->
 
 <script>
     //persist user
@@ -65,7 +65,6 @@
     BotChat.App({
             botConnection: connection,
             chatTitle: 'Lumo-Dev',
-            persistUser: true,
             user: { id: userId, name: "User" },
             resize: 'detect'
         },
@@ -73,13 +72,13 @@
     );
 
     //quick helper function to generate a GUID
-    function guid() {
-        var crypto = window.crypto || window.msCrypto;
-        return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, function(c) {
-            (c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16)
-        })
+    function G() {
+        return (((1 + Math.random()) * 0x10000) | 0).toString(16).substring(1);
     }
-
+    
+    function guid() {
+        return (G() + G() + "-" + G() + "-" + G() + "-" + G() + "-" + G() + G() + G()).toUpperCase();
+    }
 </script>
 </body>
 </html>
